--- a/enkas/あ.html
+++ b/enkas/あ.html
@@ -11,8 +11,10 @@
 <a href="#Aibo">Aibo</a><br>
 <a href="#あこがれの郵便馬車">あこがれの郵便馬車</a><br>
 <a href="#あなたがいるから">あなたがいるから</a><br>
+<a href="#あなただけ見つめてる">あなただけ見つめてる</a><br>
 <a href="#あばれ太鼓">あばれ太鼓</a><br>
 <a href="#ありがとう あなた">ありがとう あなた</a><br>
+<a href="#ありがとう">ありがとう</a><br>
 <a href="#アカシアの大連">アカシアの大連</a><br>
 <a href="#亜麻色の髪の乙女">亜麻色の髪の乙女</a><br>
 <a href="#天城越え">天城越え</a><br>
@@ -114,6 +116,66 @@ Ha… You are the one<br>
 いつか<ruby><rb>叶</rb><rt>かな</rt></ruby>えられる<br>
 </h1><br><h3><a href="#あ">Back to Top</a></h3>
 <br><hr><br><h1>
+<a id="あなただけ見つめてる">【あなただけ見つめてる】</a>G1-C3<br>
+<br>
+0 あなただけ見つめてる<br>
+出会った日から　今でもずっと<br>
+あなたさえそばにいれば<br>
+<ruby><rb>他</rb><rt>ほか</rt></ruby>に何もいらない<br>
+夢の　High Tension<br>
+<br>
+1 願い事　叶ったの<br>
+<ruby><rb>柔</rb><rt>やわ</rt></ruby>らかな冬の日<br>
+うつむき　恥ずかし<br>
+そうな　Special Drivin' Date<br>
+<br>
+あなたがそう　喜ぶから<br>
+<ruby><rb>化粧</rb><rt>けしょう</rt></ruby>をまず<ruby><rb>止</rb><rt>や</rt></ruby>めたわ<br>
+どこいても　<ruby><rb>捕</rb><rt>つか</rt></ruby>まるように<br>
+ポケベル持ったわ<br>
+<br>
+車も<ruby><rb>詳</rb><rt>くわ</rt></ruby>しくなったし<br>
+サッカーさえも好きになったわ<br>
+迷っているけど<br>
+この人に一生ついていこうと決めた<br>
+<br>
+あなただけ見つめてる<br>
+出会った日から　今でもずっと<br>
+あなたさえそばにいれば<br>
+他に何もいらない<br>
+愛の　High Tension<br>
+<br>
+2 あなたがそう　望むから<br>
+真っ<ruby><rb>直</rb><rt>す</rt></ruby>ぐ帰るようになった<br>
+ザツだった　言葉<ruby><rb>使</rb><rt>つか</rt></ruby>い丁寧になった<br>
+<br>
+あなたがそう　うつむくから<br>
+長電話も止めたわ<br>
+便利だった　男の子達　<ruby><rb>整理</rb><rt>かたづけ</rt></ruby>た<br>
+<br>
+髪も服も目立たなく<br>
+お料理もガンバルから<br>
+Partyには行きたい（な…）<br>
+<ruby><rb>嫌悪</rb><rt>いや</rt></ruby>がってたあの娘とも絶交したわ<br>
+<br>
+あなただけ見つめてる<br>
+昔みたいに笑わなくなった<br>
+<ruby><rb>苦</rb><rt>にが</rt></ruby>手だった　Spicy Your Mama<br>
+今ではお茶してる<br>
+ヤバイ　High Tension<br>
+<br>
+3 あなただけ見つめてる<br>
+そして他に誰もいなくなった<br>
+地味に生きて行くの<br>
+あなた<ruby><rb>好</rb><rt>この</rt></ruby>みの女<br>
+目<ruby><rb>指</rb><rt>ざ</rt></ruby>せっっ!!　Love Power<br>
+<br>
+あなただけ見つめてる<br>
+独りで待つ二人だけの部屋<br>
+あなたの微笑みは　バラ色の<ruby><rb>鎖</rb><rt>くさり</rt></ruby><br>
+行けっっ!!　夢見る　夢無し女!!<br>
+</h1><br><h3><a href="#あ">Back to Top</a></h3>
+<br><hr><br><h1>
 <a id="あばれ太鼓">【あばれ太鼓】</a>B1-F3<br>
 <br>
 1 どうせ死ぬときゃ　<ruby><rb>裸</rb><rt>はだか</rt></ruby>じゃないか<br>
@@ -164,6 +226,56 @@ Ha… You are the one<br>
 “ありがとう　あなた”<br>
 あとどのくらい　愛されますか<br>
 あとどのくらい　生きられますか<br>
+</h1><br><h3><a href="#あ">Back to Top</a></h3>
+<br><hr><br><h1>
+<a id="ありがとう">【ありがとう】</a>C1-A2<br>
+<br>
+1 なまぬるい風に吹かれながら<br>
+東京の空　眺めてたら<br>
+遠くで暮らしてるあなたの事を<br>
+ふと思い出す　元気ですか?<br>
+<br>
+夢を追いかけて　離れた街<br>
+見送ってくれたあの春の日<br>
+<br>
+頼りなかった僕に<br>
+「<ruby><rb>後悔</rb><rt>こうかい</rt></ruby>だけはしないで」と<br>
+優しい言葉　ぬくもり　その笑顔<br>
+ずっと<ruby><rb>覚</rb><rt>おぼ</rt></ruby>えてるよ　そして忘れないよ<br>
+今　心からありがとう<br>
+<br>
+2 出来が悪くていつも<ruby><rb>困</rb><rt>こま</rt></ruby>らせた<br>
+あなたの涙　何度も見た<br>
+素直になれずに<ruby><rb>罵声</rb><rt>ばせい</rt></ruby>を浴びせた<br>
+そんな僕でも　愛してくれた<br>
+<br>
+今になってやっと　その言葉の<br>
+本当の意味にも　気づきました<br>
+<br>
+「辛くなったときは<br>
+いつでも帰っておいで」と<br>
+いつも僕の<ruby><rb>味方</rb><rt>みかた</rt></ruby>でいてくれた<br>
+心配かけたこと　支えてくれたこと<br>
+今　心からありがとう<br>
+<br>
+3 返しても　返しても<br>
+返しきれない<br>
+この感謝と敬意を　伝えたい<br>
+<br>
+頼りなかった僕も<br>
+少し大人になり<br>
+今度は僕が支えていきます<br>
+そろそろいい年でしょう<br>
+楽して暮らしてください<br>
+僕ならもう大丈夫だから<br>
+<br>
+あなたの元に生まれ<br>
+本当によかったと<br>
+今こうして胸を張って言い切れる<br>
+あなたの願うような<br>
+僕になれていますか?<br>
+そんな事を考える<br>
+今　心からありがとう<br>
 </h1><br><h3><a href="#あ">Back to Top</a></h3>
 <br><hr><br><h1>
 <a id="アカシアの大連">【アカシアの大連】</a>E1-A2<br>
