--- a/enkas/し.html
+++ b/enkas/し.html
@@ -23,7 +23,7 @@
 <a href="#知床旅情（オホーツクの舟唄）">知床旅情（オホーツクの舟唄）</a><br>
 </h2>
 <br><hr><br><h1>
-<a id="Secret of my heart">【Secret of my heart】</a>C1-同名大小调-多次变调-最高音E2<br>
+<a id="Secret of my heart">【Secret of my heart】</a>B1-同名大小调-多次变调-最高音E3<br>
 <br>
 1 どんな　言葉に変えて<br>
 君に　伝えられるだろう<br>
