--- a/enkas/ひ.html
+++ b/enkas/ひ.html
@@ -8,10 +8,56 @@
 <a href="..\indexenka.html" id="ひ">Enka Category</a><br><br>
 <h2>
 ひ<br><br>
+<a href="#ひとり上手">ひとり上手</a><br>
 <a href="#ひまわり">ひまわり</a><br>
 <a href="#光と影のロマン">光と影のロマン</a><br>
 <a href="#瞳をとじて">瞳をとじて</a><br>
 </h2>
+<br><hr><br><h1>
+<a id="ひとり上手">【ひとり上手】</a><sup>#</sup>G1-C3-升半音<br>
+<br>
+1 私の帰る家は<br>
+あなたの声のする街角<br>
+冬の雨に打たれて<br>
+あなたの足音を探すのよ<br>
+<br>
+あなたの帰る家は<br>
+私を忘れたい街角<br>
+肩を抱いているのは<br>
+私と似ていない長い髪<br>
+<br>
+心が街角で泣いている<br>
+ひとりはキライだとすねる<br>
+<br>
+ひとり上手と呼ばないで<br>
+心だけ連れてゆかないで<br>
+私を置いてゆかないで<br>
+ひとり好きなわけじゃないのよ<br>
+<br>
+2 雨のようにすなおに<br>
+あの人と私は流れて<br>
+雨のように愛して<br>
+サヨナラの海へ流れついた<br>
+<br>
+手紙なんてよしてね<br>
+なんどもくり返し泣くから<br>
+電話だけで捨ててね<br>
+僕もひとりだよとだましてね<br>
+<br>
+心が街角で泣いている<br>
+ひとりはキライだとすねる<br>
+<br>
+ひとり上手と呼ばないで<br>
+心だけ連れてゆかないで<br>
+私を置いてゆかないで<br>
+ひとりが好きなわけじゃないのよ<br>
+<br>
+（升半音）<br>
+3 ひとり上手と呼ばないで<br>
+心だけ連れてゆかないで<br>
+私を置いてゆかないで<br>
+ひとりが好きなわけじゃないのよ<br>
+</h1><br><h3><a href="#ひ">Back to Top</a></h3>
 <br><hr><br><h1>
 <a id="ひまわり">【ひまわり】</a>G1-A2<br>
 <br>
