--- a/cover.html
+++ b/cover.html
@@ -7,12 +7,12 @@
 	</style>
 </head>
 
+<table align="left" cellpadding="10">
 	<!--
 	<tr>
 		<td>
 			&#9679; 『』- <br>&nbsp;&nbsp;
 			作詞：／作曲：
-			
 		</td>
 		<td><audio controls>
 			<source src="audios/.mp3" type="audio/mpeg">
@@ -20,12 +20,10 @@
 	</tr>
 	-->
 
-<table align="left" cellpadding="10">
 	<tr>
 		<td>
 			&#9679; 『あこがれの郵便馬車』- 岡本敦郎<br>&nbsp;&nbsp;
 			作詞：丘灯至夫／作曲：古関裕而
-			
 		</td>
 		<td><audio controls>
 			<source src="audios/あこがれの郵便馬車.mp3" type="audio/mpeg">
@@ -44,7 +42,7 @@
 
 	<tr>
 		<td>
-			&#9679; 『愛される花愛されぬ花』- 三田寛子 / 中島みゆき<br>&nbsp;&nbsp;
+			&#9679; 『愛される花愛されぬ花』- 三田寛子<br>&nbsp;&nbsp;
 			作詞／作曲：中島みゆき
 		</td>
 		<td><audio controls>
@@ -94,7 +92,7 @@
 
 	<tr><td></td></tr>
 
-^	<tr>
+	<tr>
 		<td>
 			&#9679; 『涙そうそう』- 夏川りみ<br>&nbsp;&nbsp;
 			作詞：森山良子／作曲：BEGIN
