--- a/enkas/ら.html
+++ b/enkas/ら.html
@@ -9,6 +9,7 @@
 <h2>
 ら<br><br>
 <a href="#Love is…">Love is…</a><br>
+<a href="#ラブ・ストーリーは突然に">ラブ・ストーリーは突然に</a><br>
 </h2>
 <br><hr><br><h1>
 <a id="Love is…">【Love is…】</a>C1-E3<br>
@@ -40,6 +41,68 @@ I'd give you my whole thing, even if you don't want.<br>
 Love is my only… Love is my treasure.<br>
 Please close to me more and don't leave me alone.<br>
 Please close to me more and don't leave me alone.<br>
+</h1><br><h3><a href="#ら">Back to Top</a></h3>
+<br><hr><br><h1>
+<a id="ラブ・ストーリーは突然に">【ラブ・ストーリーは突然に】</a>F1-A2<br>
+<br>
+1 何から伝えれば　いいのか<br>
+分からないまま時は流れて<br>
+浮かんでは　消えてゆく<br>
+ありふれた言葉だけ<br>
+<br>
+君があんまり　すてきだから<br>
+ただすなおに　好きと言えないで<br>
+多分もうすぐ　雨も止んで<br>
+二人　たそがれ<br>
+<br>
+あの日　あの時　あの場所で<br>
+君に会えなかったら<br>
+僕<ruby><rb>等</rb><rt>ら</rt></ruby>は　いつまでも<br>
+見知らぬ二人のまま<br>
+<br>
+2 誰れかが甘く誘う言葉に<br>
+もう心揺れたりしないで<br>
+切ないけど　そんなふうに<br>
+心は<ruby><rb>縛</rb><rt>しば</rt></ruby>れない<br>
+<br>
+明日になれば　君をきっと<br>
+今よりもっと　好きになる<br>
+そのすべてが僕のなかで<br>
+時を<ruby><rb>超</rb><rt>こ</rt></ruby>えてゆく<br>
+<br>
+君のためにつばさになる<br>
+君を守りつづける<br>
+やわらかく　君をつつむ<br>
+あの風になる<br>
+<br>
+あの日　あの時　あの場所で<br>
+君に会えなかったら<br>
+僕等は　いつまでも<br>
+見知らぬ二人のまま<br>
+<br>
+3 今　君の心が動いた<br>
+言葉止めて　肩を寄せて<br>
+僕は忘れないこの日を<br>
+君を誰にも渡さない<br>
+<br>
+君のためにつばさになる<br>
+君を守りつづける<br>
+やわらかく　君をつつむ<br>
+あの風になる<br>
+<br>
+あの日　あの時　あの場所で<br>
+君に会えなかったら<br>
+僕等は　いつまでも<br>
+見知らぬ二人のまま<br>
+<br>
+誰かが甘く誘う言葉に<br>
+心揺れたりしないで<br>
+君をつつむ　あの風になる<br>
+<br>
+あの日　あの時　あの場所で<br>
+君に会えなかったら<br>
+僕等は　いつまでも<br>
+見知らぬ二人のまま<br>
 </h1><br><h3><a href="#ら">Back to Top</a></h3>
 <a href="..\indexenka.html">Enka Category</a></body>
 </html>
