--- a/reviewer.html
+++ b/reviewer.html
@@ -39,6 +39,7 @@
 		&#9679; Biosensors<br>
 		&#9679; Brain Sciences<br>
 		&#9679; Buildings<br>
+		&#9679; Diagnostics<br>
 		&#9679; Electronics<br>
 		&#9679; Entropy<br>
 		&#9679; Informatics<br>
