--- a/students.html
+++ b/students.html
@@ -18,7 +18,7 @@
 			<tr><td align="center" colspan="2">
 				<h1>Hui LIU's Supervised Students and Research Assistants</h1>
 			</td></tr>
-				
+
 			<tr><td align="center" colspan="2">
 				<img src="images/DE.svg" height="40"> 
 				<img src="images/BD.png" height="40"> 
@@ -30,6 +30,13 @@
 				<img src="images/IR.png" height="40"> 
 				<img src="images/TR.png" height="40"> 
 			</td></tr>
+
+			<tr><td align="center" colspan="2">
+				<a href="images/students/Students_2023.jpg" target="_blank" rel="noopener noreferrer"><img src="images/students/Students_2023.jpg" height="315" class="pop1"></a><br>
+				Hui's research group (partially) 2023
+			</td></tr>
+
+			<tr><td></td></tr>
 
 			<tr>
 				<td align="center">
@@ -345,7 +352,8 @@
 				</td>
 				<td>
 					Graduation research in progress<br>
-					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Difficulty analysis of songs for singing
+					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Automatic pitching evaluation<br>
+					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Intonation training
 				</td>
 			</tr>
 
@@ -356,13 +364,26 @@
 				</td>
 				<td>
 					Graduation research in progress<br>
-					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; To be determined
+					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; AI-based correction of fuel cell aging model
 				</td>
 			</tr>
+			
+			<tr>
+				<td align="center">
+					<img src="images/students/Mohamad_Tofayel_Ahmed.jpg" width="150"></a><br>
+					<b>@Mohamad Asif Siddiqui</b>
+				</td>
+				<td>
+					Graduation research in progress<br>
+					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Evaluation of outlier detection algorithms 
+				</td>
+			</tr>
+
+			
 			<!--
 			<tr>
 				<td align="center">
-					<img src="images/students/.png" width="150"></a><br>
+					<img src="images/students/.jpg" width="150"></a><br>
 					<b></b>
 				</td>
 				<td>
