--- a/studentscn.html
+++ b/studentscn.html
@@ -18,6 +18,7 @@
 			<tr><td align="center" colspan="2">
 				<h1>刘辉的科研小组：指导的科研助理以及毕设学生</h1>
 			</td></tr>
+
 			<tr><td align="center" colspan="2">
 				<img src="images/DE.svg" height="40"> 
 				<img src="images/BD.png" height="40"> 
@@ -29,6 +30,14 @@
 				<img src="images/IR.png" height="40"> 
 				<img src="images/TR.png" height="40"> 
 			</td></tr>
+
+			<tr><td align="center" colspan="2">
+				<a href="images/students/Students_2023.jpg" target="_blank" rel="noopener noreferrer"><img src="images/students/Students_2023.jpg" height="315" class="pop1"></a><br>
+				科研小组部分学生（2023）
+			</td></tr>
+
+			<tr><td></td></tr>
+
 			<tr>
 				<td align="center">
 					<img src="images/students/Yale_Hartmann.jpeg" width="150"></a><br>
@@ -44,6 +53,7 @@
 					&rarr; 不来梅大学博士在读
 				</td>
 			</tr>
+
 			<tr>
 				<td align="center">
 					<img src="images/students/Anindya_Chowdhury.jpg" width="150"></a><br>
@@ -56,6 +66,7 @@
 					&rarr; 数据分析师 @ 富士胶片欧洲（拉廷根）
 				</td>
 			</tr>
+
 			<tr>
 				<td align="center">
 					<img src="images/students/Lennard_Mai.jpg" width="150"></a><br>
@@ -68,6 +79,7 @@
 					&rarr; 数据分析师 @ hmmh（不来梅）
 				</td>
 			</tr>
+
 			<tr>
 				<td align="center">
 					<img src="images/students/Timo_Urban.png" width="150"></a><br>
@@ -81,6 +93,7 @@
 					&rarr; 软件工程师 @ TK保险（汉堡）
 				</td>
 			</tr>
+
 			<tr>
 				<td align="center">
 					<img src="images/students/Kilian_Lüdemann.jpg" width="150"></a><br>
@@ -94,6 +107,7 @@
 					&rarr;  软件工程师 @ RealCore集团（埃森）
 					</td>
 			</tr>
+
 			<tr>
 				<td align="center">
 					<img src="images/students/Tobias_Dellert.jpg" width="150"></a><br>
@@ -107,6 +121,8 @@
 					<br><br>
 					&rarr; 数据工程师 @ WearHealth（不来梅）
 				</td>
+			</tr>
+
 			<tr>
 				<td align="center">
 					<img src="images/students/Isabel_de_Almeida_Curioso.jpg" width="150"></a><br>
@@ -120,6 +136,7 @@
 					&rarr; 研究员 @ 葡萄牙
 				</td>
 			</tr>
+
 			<tr>
 				<td align="center">
 					<img src="images/students/Shiyao_Zhang.jpg" width="150"></a><br>
@@ -131,6 +148,7 @@
 					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 实时心电信号处理
 				</td>
 			</tr>
+
 			<tr>
 				<td align="center">
 					<img src="images/students/Male.png" width="150"></a><br>
@@ -142,6 +160,7 @@
 					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 跨信道特征
 				</td>
 			</tr>
+
 			<tr>
 				<td align="center">
 					<img src="images/students/Wei_Wang.png" width="150"></a><br>
@@ -154,6 +173,7 @@
 					&rarr; IT应用开发师 @ 博世（爱森纳赫）
 				</td>
 			</tr>
+
 			<tr>
 				<td align="center">
 					<img src="images/students/Daniel_Osorio.png" width="150"></a><br>
@@ -167,6 +187,7 @@
 					&rarr; 资深工程师 @ PLUX无线生物信号传感器公司
 				</td>
 			</tr>
+
 			<tr>
 				<td align="center">
 					<img src="images/students/Jonas_Boule.jpg" width="150"></a><br>
@@ -178,6 +199,7 @@
 					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 针对人体动作识别的脑电和惯性数据融合
 				</td>
 			</tr>
+
 			<tr>
 				<td align="center">
 					<img src="images/students/Romina_Razeghi_Oskouei.png" width="150"></a><br>
@@ -190,6 +212,7 @@
 					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 面部表情单元识别
 				</td>
 			</tr>
+
 			<tr>
 				<td align="center">
 					<img src="images/students/Ferdinand_Rohlfing.jpg" width="150"></a><br>
@@ -200,6 +223,7 @@
 					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 基于肌电的表情识别人工智能
 				</td>
 			</tr>
+
 			<tr>
 				<td align="center">
 					<img src="images/students/Anantha_Sripada_Abhinav_Veldanda.png" width="150"></a><br>
@@ -214,6 +238,7 @@
 					&rarr; 工程师 @ 印度
 				</td>
 			</tr>
+
 			<tr>
 				<td align="center">
 					<img src="images/students/Johann_Joachim_Keuneke.png" width="150"></a><br>
@@ -224,6 +249,7 @@
 					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 智能手机中的多模态传感器融合平台
 				</td>
 			</tr>
+
 			<tr>
 				<td align="center">
 					<img src="images/students/Daniel_Ott.png" width="150"></a><br>
@@ -235,6 +261,7 @@
 					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 演唱辅助的界面设计
 				</td>
 			</tr>
+
 			<tr>
 				<td align="center">
 					<img src="images/students/Hasanur_Jaman_Seam.jpg" width="150"></a><br>
@@ -245,6 +272,7 @@
 					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 智能手机作为实时人体动作识别平台
 				</td>
 			</tr>
+
 			<tr>
 				<td align="center">
 					<img src="images/students/Hannes_Wehrmann.png" width="150"></a><br>
@@ -256,6 +284,7 @@
 					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 人体动作识别的可听化
 				</td>
 			</tr>
+
 			<tr>
 				<td align="center">
 					<img src="images/students/Rakibul_Islam.jpg" width="150"></a><br>
@@ -267,6 +296,7 @@
 					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 多模态数据的自相似性矩阵
 				</td>
 			</tr>
+
 			<tr>
 				<td align="center">
 					<img src="images/students/Ciwan_Gülpinar.jpg" width="150"></a><br>
@@ -277,6 +307,7 @@
 					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 元宇宙中生物信号的可视化和交互<br>
 				</td>
 			</tr>
+
 			<tr>
 				<td align="center">
 					<img src="images/students/Thorben_Lorenzen.png" width="150"></a><br>
@@ -288,6 +319,7 @@
 					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 钢琴自学辅助
 				</td>
 			</tr>
+
 			<tr>
 				<td align="center">
 					<img src="images/students/Leon_Flaack.jpg" width="150"></a><br>
@@ -299,6 +331,7 @@
 					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 基于符号旋律的自动和弦生成
 				</td>
 			</tr>
+
 			<tr>
 				<td align="center">
 					<img src="images/students/Jiumeng_Chen.jpg" width="150"></a><br>
@@ -310,6 +343,7 @@
 					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 足部动作识别
 				</td>
 			</tr>
+
 			<tr>
 				<td align="center">
 					<img src="images/students/Joel_Warnken.jpg" width="150"></a><br>
@@ -317,9 +351,11 @@
 				</td>
 				<td>
 					毕设进行<br>
-					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 歌曲的演唱难度分析
+					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 自动人声音高检测
+					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 音准辅助训练
 				</td>
 			</tr>
+
 			<tr>
 				<td align="center">
 					<img src="images/students/Male.png" width="150"></a><br>
@@ -327,9 +363,21 @@
 				</td>
 				<td>
 					毕设进行<br>
-					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 课题待定
+					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 燃料电池老化模型的人工智能修正
 				</td>
 			</tr>
+
+			<tr>
+				<td align="center">
+					<img src="images/students/Mohamad_Tofayel_Ahmed.jpg" width="150"></a><br>
+					<b>@Mohamad Asif Siddiqui（孟）</b>
+				</td>
+				<td>
+					毕设进行<br>
+					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 离群点检测算法在海量不同各类数据集上的性能评判 
+				</td>
+			</tr>
+
 			<!--
 			<tr>
 				<td align="center">
