--- a/enkas/ふ.html
+++ b/enkas/ふ.html
@@ -140,27 +140,27 @@
 いつまでも　止まらない<br>
 この胸の　ときめきで　一緒に踊ろう<br>
 <br>
-君の背中で　あの日<br>
+ミラの背中で　あの日<br>
 みつけた月が　今日も<br>
 ミラーボールみたいに　夜空で<br>
 キラリ　チラり　輝いてる<br>
 <br>
 （升2半音）<br>
-かわってくもの　かわらないもの<br>
+変わってくもの　変わらないもの<br>
 <ruby><rb>飽</rb><rt>あ</rt></ruby>きっぽい　私が<br>
-はじめて　知った　この永遠を<br>
-君に誓うよ<br>
+初めて知った　この永遠を<br>
+ミラに誓うよ<br>
 <br>
-プラチナ　うれしいのに<br>
-プラチナ　せつなくなって<br>
-プラチナ　なみだがでちゃうのは<br>
+プラチナ　嬉しいのに<br>
+プラチナ　切なくなって <br>
+プラチナ　涙が出ちゃうのは<br>
 なんで? どして?　ディスコティック<br>
 <br>
 （回原调）<br>
 2 振り向けば　いつでも<br>
 並んでる　足跡<br>
-君とねぇ　じゃれあって<br>
-ねむたくて　ねむくない<br>
+ミラとねぇ　じゃれ合って<br>
+眠たくて　眠くない<br>
 まだちょっと　あとすこし<br>
 朝まで　踊ろう<br>
 <br>
@@ -172,22 +172,22 @@
 （升2半音）<br>
 ささやかだけど　かけがえのない<br>
 歴史を<ruby><rb>重</rb><rt>かさ</rt></ruby>ねて<br>
-ちいさなうそも　ほんとうになる<br>
-君のとなりで<br>
+小さな噓も　本当になる<br>
+君の隣で<br>
 <br>
-3 かわってくもの　かわらないもの<br>
+3 変わってくもの　変わらないもの<br>
 飽きっぽい　私が<br>
-はじめて　知った　この永遠を<br>
-君に誓うよ<br>
+初めて知った　この永遠を<br>
+ミラに誓うよ<br>
 <br>
 ささやかだけど　かけがえのない<br>
 歴史を<ruby><rb>重</rb><rt>かさ</rt></ruby>ねて<br>
-<ruby><rb>偽</rb><rt>いつわ</rt></ruby>りさえも　ほんとうになる<br>
-君のとなりで<br>
+<ruby><rb>偽</rb><rt>いつわ</rt></ruby>りさえも　本当になる<br>
+君の隣で<br>
 <br>
-プラチナ　うれしいのに<br>
-プラチナ　せつなくなって<br>
-プラチナ　なみだがでちゃうのは<br>
+プラチナ　嬉しいのに<br>
+プラチナ　切なくなって <br>
+プラチナ　涙が出ちゃうのは<br>
 なんで? どして?　ディスコティック<br>
 <br>
 なんで? どして?　ディスコティック<br>
