--- a/enkas/お.html
+++ b/enkas/お.html
@@ -373,7 +373,7 @@ Oh Oh I<br>
 男は女　女は男<br>
 </h1><br><h3><a href="#お">Back to Top</a></h3>
 <br><hr><br><h1>
-<a id="男と女のラブゲーム">【男と女のラブゲーム】</a>E1-G2<br>
+<a id="男と女のラブゲーム">【男と女のラブゲーム】</a>E1-A2<br>
 <br>
 1 （女）飲みすぎたのは　あなたのせいよ<br>
 （男）弱い女のいとしさを<br>
