--- a/enkas/か.html
+++ b/enkas/か.html
@@ -12,6 +12,7 @@
 <a href="#かもめが翔んだ日">かもめが翔んだ日</a><br>
 <a href="#川の流れのように">川の流れのように</a><br>
 <a href="#帰ってこいよ">帰ってこいよ</a><br>
+<a href="#枯れない花">枯れない花</a><br>
 <a href="#河内おとこ節">河内おとこ節</a><br>
 <a href="#買物ブギー">買物ブギー</a><br>
 </h2>
@@ -156,6 +157,39 @@
 こんなに綺麗な　茜空<br>
 帰ってこいよ　帰ってこいよ<br>
 帰ってこいよ<br>
+</h1><br><h3><a href="#か">Back to Top</a></h3>
+<br><hr><br><h1>
+<a id="枯れない花">【枯れない花】</a>C1-E2<br>
+<br>
+1 ココロに　小さな　花が　咲いてる<br>
+君から　もらった　枯れない花が<br>
+信じることをもう　怖がらないくらい<br>
+強くなれたから<br>
+<br>
+君に逢えて　嬉しかった<br>
+繋いだ手が　誇りだった<br>
+今は　別々の空　見上げていても<br>
+ほら　歩ける　一人でも<br>
+<br>
+2 悲しい　時ほど　笑う私を<br>
+何にも　言わないで　抱いてくれたね<br>
+凍りついたドアが　そっと<ruby><rb>開</rb><rt>ひら</rt></ruby>くような<br>
+そんな気がしたよ<br>
+<br>
+君に逢えて　嬉しかった<br>
+孤独さえも　分かち合えた<br>
+今も　この空の下　繋がっていると<br>
+そう　思える　離れても<br>
+<br>
+3 「ありがとう｡」も　言えなかった<br>
+約束さえ　できなかった<br>
+だけど　あの日と同じ　風が吹いたら<br>
+また　<ruby><rb>必</rb><rt>かなら</rt></ruby>ず　逢えるよね<br>
+<br>
+君に逢えて　嬉しかった<br>
+繋いだ手が　誇りだった<br>
+今は　別々の空　見上げていても<br>
+ほら　歩ける　一人でも<br>
 </h1><br><h3><a href="#か">Back to Top</a></h3>
 <br><hr><br><h1>
 <a id="河内おとこ節">【河内おとこ節】</a>C1-G2<br>
