--- a/enkas/さ.html
+++ b/enkas/さ.html
@@ -18,6 +18,7 @@
 <a href="#桜坂">桜坂</a><br>
 <a href="#桜色舞うころ">桜色舞うころ</a><br>
 <a href="#残酷な天使のテーゼ">残酷な天使のテーゼ</a><br>
+<a href="#酒場ひとり">酒場ひとり</a><br>
 <a href="#里の秋">里の秋</a><br>
 </h2>
 <br><hr><br><h1>
@@ -369,6 +370,30 @@
 ほとばしる熱いパトスで<br>
 思い出を<ruby><rb>裏切</rb><rt>うらぎ</rt></ruby>るなら<br>
 この宇宙を抱いて輝く　少年よ　神話になれ<br>
+</h1><br><h3><a href="#さ">Back to Top</a></h3>
+<br><hr><br><h1>
+<a id="酒場ひとり">【酒場ひとり】</a>E1-C3<br>
+<br>
+1 叶う夢やら　叶わぬ夢か<br>
+夢を追うのも　恋のため<br>
+別れても　未練があるから　忘れない<br>
+酒よなんにも　聞かないで<br>
+いろいろあって　いま　独り<br>
+ああ　いま　独り<br>
+<br>
+2 <ruby><rb>拗</rb><rt>すね</rt></ruby>ねて生きてる　<ruby><rb>訳</rb><rt>わけ</rt></ruby>ではないが<br>
+酒と仲良し　安酒場<br>
+人生は　<ruby><rb>表</rb><rt>おもて</rt></ruby>があるから　<ruby><rb>裏</rb><rt>うら</rt></ruby>がある<br>
+裏は知りたく　なかったが<br>
+いろいろあって　いま　独り<br>
+ああ　いま　独り<br>
+<br>
+3 過ぎた昔と　諦めるには<br>
+生きる<ruby><rb>運命</rb><rt>さだめ</rt></ruby>が　辛すぎる<br>
+雨の夜は　あんたが欲しいと　<ruby><rb>怨</rb><rt>うら</rt></ruby>み節<br>
+夢も薄れる　肌寒さ<br>
+いろいろあって　いま　独り<br>
+ああ　いま　独り<br>
 </h1><br><h3><a href="#さ">Back to Top</a></h3>
 <br><hr><br><h1>
 <a id="里の秋">【里の秋】</a>G1-A2<br>
