--- a/enkas/ふ.html
+++ b/enkas/ふ.html
@@ -256,6 +256,16 @@
 <br>
 トラワヨ　プサンハンへ<br>
 逢いたい　あなた<br>
+<br>
+附<br>
+꽃 피 는　 동 백 섬 에　 봄 이　 왔 건 만<br>
+형 제　 떠 난　 부 산 항 에　 갈 매 기 만　 슬 피　 우 네<br>
+오 륙 도　 돌 아 가 는　 연 락 선　 마 다<br>
+목 메 어　 불 러 봐 도　 대 답　없 는　 내　 형 제 여<br>
+돌 아 와 요　 부 산 항 에　 그 리 운　 내　 형 제 여<br>
+<br>
+日思夜想 熾熱胸膛 我的臉龐 深深埋藏 一場一場 幸福幻想<br>
+甜美芬芳 細細品嚐 淚的海洋 那釜山港 多麼盼望 你的返航<br>
 </h1><br><h3><a href="#ふ">Back to Top</a></h3>
 <a href="..\indexenka.html">Enka Category</a></body>
 </html>
