--- a/enkas/ま.html
+++ b/enkas/ま.html
@@ -13,6 +13,7 @@
 <a href="#マイ フレンド">マイ フレンド</a><br>
 <a href="#真夏の果実">真夏の果実</a><br>
 <a href="#聖母たちのララバイ">聖母たちのララバイ</a><br>
+<a href="#舞いよ舞え">舞いよ舞え</a><br>
 <a href="#迷い道">迷い道</a><br>
 </h2>
 <br><hr><br><h1>
@@ -191,6 +192,58 @@
 今は　心の痛みをぬぐって<br>
 小さな子供の昔に帰って<br>
 熱い胸に　甘えて<br>
+</h1><br><h3><a href="#ま">Back to Top</a></h3>
+<br><hr><br><h1>
+<a id="舞いよ舞え">【舞いよ舞え】</a>B1-F3<br>
+<br>
+0 舞いよ舞え　夢よ　どうせ<ruby><rb>儚</rb><rt>はかな</rt></ruby>い　<ruby><rb>愚</rb><rt>おろ</rt></ruby>か者<br>
+舞いよ舞え　咲けよ　そしてひと太刀の　花になれ<br>
+<br>
+1　黒く　光った　<ruby><rb>玉鋼</rb><rt>たまはがね</rt></ruby>　地・水・火・風の命受けて<br>
+<ruby><rb>誠</rb><rt>まこと</rt></ruby>　福岡　一文字　<ruby><rb>平手造酒</rb><rt>ひらてみき</rt></ruby>なら　望む<ruby><rb>気質</rb><rt>きだて</rt></ruby>だぜ<br>
+<br>
+<ruby><rb>利根</rb><rt>とね</rt></ruby>の河原へ　<ruby><rb>例</rb><rt>たと</rt></ruby>えその身が<br>
+尽きようとも<br>
+握る　<ruby><rb>柄</rb><rt>つか</rt></ruby>から　血がたぎるぜ<br>
+<br>
+舞いよ舞え　時よ　どうせこの世は　愚か者<br>
+舞いよ舞え　風よ　全て巻き上げて　空になれ<br>
+<br>
+2 初めはただの<ruby><rb>玉鋼</rb><rt>たまはがね</rt></ruby><br>
+<ruby><rb>後鳥羽院</rb><rt>ごとばいん</rt></ruby><ruby><rb>御番鍛冶</rb><rt>ごばんかじ</rt></ruby>の手により打ち出され<br>
+生まれいでたるこの<ruby><rb>我</rb><rt>われ</rt></ruby>を<br>
+心技一体、<ruby><rb>使</rb><rt>つか</rt></ruby>いこなせる剣豪はありや<br>
+<ruby><rb>刃文</rb><rt>はもん</rt></ruby>に映る顔、顔、顔……<br>
+こやつも、あやつも<ruby><rb>食</rb><rt>く</rt></ruby>い<ruby><rb>足</rb><rt>た</rt></ruby>りぬ<br>
+<ruby><rb>位</rb><rt>くらい</rt></ruby>や家は<ruby><rb>高貴</rb>こうき<rt></rt></ruby>でも、<ruby><rb>名刀</rb><rt>めいとう</rt></ruby>福岡一文字<br>
+たやすく<ruby><rb>扱</rb><rt>あつか</rt></ruby>えるものではない<br>
+ところが、ある男の手が触れたとき<br>
+ああ、こやつこそ、と思ったのだ　その男、平手造酒<br>
+<br>
+3 金も　<ruby><rb>門閥</rb><rt>もんばつ</rt></ruby>もないその身　けれど俺とは　ウマが合う<br>
+千葉の周作　四天<ruby><rb>王</rb><rt>のう</rt></ruby>　例え堕ちても　剣に　一途だぜ<br>
+<br>
+利根の河原へ　<ruby><rb>倒</rb><rt>たお</rt></ruby>れ行く時　何故　微笑む<br>
+<ruby><rb>悔</rb><rt>く</rt></ruby>いは　ないぜと　俺に　言うのか<br>
+<br>
+舞いよ舞え　夢よ　どうせ<ruby><rb>儚</rb><rt>はかな</rt></ruby>い　愚か者<br>
+舞いよ舞え　咲けよ　そしてひと太刀の　花になれ<br>
+<br>
+4 ときに天保十二年、八月<ruby><rb>半</rb><rt>なか</rt></ruby>ばの十三夜や<br>
+利根の川風向かい風<br>
+病んだ身体に<ruby><rb>鞭</rb><rt>むち</rt></ruby>打って、喧嘩場へ駆ける平手酒造<br>
+この剣豪に<ruby><rb>操</rb><rt>あやつ</rt></ruby>られ、この身は踊る、人を斬る<br>
+一人、二人、三人、四人……<br>
+だが相棒よ、終わりの時が来たようだ<br>
+<ruby><rb>我</rb><rt>わ</rt></ruby>が身がぽきりと折れたとき<br>
+平手にずぶりと<ruby><rb>刃</rb><rt>やいば</rt></ruby>がささる<br>
+薄ら笑いを浮かべつつ、河原に<ruby><rb>倒</rb><rt>たお</rt></ruby>れた平手の横で<br>
+折れた<ruby><rb>刃</rb><rt>は</rt></ruby>先に月が映る<br>
+<br>
+舞いよ舞え　夢よ　どうせ<ruby><rb>儚</rb><rt>はかな</rt></ruby>い　愚か者<br>
+舞いよ舞え　咲けよ　そしてひと太刀の　花になれ<br>
+舞いよ舞え　花よ どうせこの世は 愚か者<br>
+舞いよ舞え　夢よ 全てこの世への 置き土産<br>
 </h1><br><h3><a href="#ま">Back to Top</a></h3>
 <br><hr><br><h1>
 <a id="迷い道">【迷い道】</a>G1-A2<br>
