--- a/students.html
+++ b/students.html
@@ -359,8 +359,8 @@
 
 			<tr>
 				<td align="center">
-					<img src="images/students/Male.png" width="150"></a><br>
-					<b>Mohamad Tofayel Ahmed</b>
+					<img src="images/students/Mohamad_Tofayel_Ahmed.jpg" width="150"></a><br>
+					<b>@Mohamad Tofayel Ahmed</b>
 				</td>
 				<td>
 					Graduation research in progress<br>
@@ -370,7 +370,7 @@
 			
 			<tr>
 				<td align="center">
-					<img src="images/students/Mohamad_Tofayel_Ahmed.jpg" width="150"></a><br>
+					<img src="images/students/Mohamad_Asif_Siddiqui.jpg" width="150"></a><br>
 					<b>@Mohamad Asif Siddiqui</b>
 				</td>
 				<td>
