--- a/studentscn.html
+++ b/studentscn.html
@@ -351,14 +351,14 @@
 				</td>
 				<td>
 					毕设进行<br>
-					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 自动人声音高检测
+					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 自动人声音高检测<br>
 					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 音准辅助训练
 				</td>
 			</tr>
 
 			<tr>
 				<td align="center">
-					<img src="images/students/Male.png" width="150"></a><br>
+					<img src="images/students/Mohamad_Tofayel_Ahmed.jpg" width="150"></a><br>
 					<b>Mohamad Tofayel Ahmed（孟）</b>
 				</td>
 				<td>
@@ -369,7 +369,7 @@
 
 			<tr>
 				<td align="center">
-					<img src="images/students/Mohamad_Tofayel_Ahmed.jpg" width="150"></a><br>
+					<img src="images/students/Mohamad_Asif_Siddiqui.jpg" width="150"></a><br>
 					<b>@Mohamad Asif Siddiqui（孟）</b>
 				</td>
 				<td>
