--- a/reviewer.html
+++ b/reviewer.html
@@ -19,7 +19,7 @@
 		<img src="images/Elsevier.png" height="20" class="pop1"> <img src="images/ScienceDirect.png" height="20" class="pop1"><br>
 		&#9679; Biomedical Signal Processing and Control<br>
 		<br>
-		<img src="images/IOPScience.png" height="20"><br>
+		<img src="images/IOP.png" height="20"><br>
 		&#9679; Physiological Measurement<br>
 		<br>
 		<img src="images/Frontiers.png" height="25" class="pop1"><br>
