--- a/research.html
+++ b/research.html
@@ -206,7 +206,10 @@
 				</tr>
 				<tr>
 					<td align="center"><a href="reviewer.html" target="_blank" rel="noopener noreferrer">Reviewer</a></td>
-					<td>For over 20 journals, such as Nature Commnications, and various conferences, such as IEEE BSN</td>
+					<td>
+						&#9679; For over 20 journals, including Nat. Commun., Biomed. Signal Process. Control, Front. Physiol., Front. Med., Physiol. Meas., ISPRS Int. J. Geo-Inf., and Biosensors<br>
+						&#9679; For various conferences, including IEEE BSN, BHI; ACM ICMI, ISWC, AUTOMOTIVEUI; ITP
+					</td>
 				</tr>
 				<tr>
 					<td align="center"><a href="https://www.uni-bremen.de/en/csl/projects/past-projects/arthrokinemat" target="_blank" rel="noopener noreferrer"><img src="images/Arthrokinemat.png" height="60" class="pop5"></a><br>Arthrokinemat (2016 — 2019)</td>
