--- a/researchcn.html
+++ b/researchcn.html
@@ -165,15 +165,6 @@
 			<tr><td><h1 align="left"><span style="text-decoration: overline">学术贡献</span></h1></td><tr>
 			<tr><td><table align="left" cellpadding="15">
 				<tr>
-					<td align="center">特邀编委</td>
-					<td>
-						<img src="images/MDPI.png" height="25"><br>
-						&#9679; <img src="images/Sensors.png" height="15">	Sensors 专刊 <i>Sensors for Human Activity Recognition</i>: 
-						<a href="https://www.mdpi.com/journal/sensors/special_issues/Sensors_Human_Activity_Recognition" target="_blank" rel="noopener noreferrer">卷I</a>
-						<a href="https://www.mdpi.com/journal/sensors/special_issues/671TM05M9J" target="_blank" rel="noopener noreferrer">卷II</a>
-					</td>
-				</tr>
-				<tr>
 					<td align="center"><a href="https://loop.frontiersin.org/people/1257413/overview" target="_blank" rel="noopener noreferrer">编委（医学和公共健康方向）</a></td>
 					<td>
 						<img src="images/Frontiers.png" height="25" class="pop1"><br>
@@ -186,6 +177,15 @@
 					<td>
 						<img src="images/Frontiers.png" height="25" class="pop1"><br>
 						&#9679; Frontiers in Behavioral Neuroscience<br>
+					</td>
+				</tr>
+				<tr>
+					<td align="center">特邀编委</td>
+					<td>
+						<img src="images/MDPI.png" height="25"><br>
+						&#9679; <img src="images/Sensors.png" height="15">	Sensors 专刊 <i>Sensors for Human Activity Recognition</i>: 
+						<a href="https://www.mdpi.com/journal/sensors/special_issues/Sensors_Human_Activity_Recognition" target="_blank" rel="noopener noreferrer">卷I</a>
+						<a href="https://www.mdpi.com/journal/sensors/special_issues/671TM05M9J" target="_blank" rel="noopener noreferrer">卷II</a>
 					</td>
 				</tr>
 				<tr>
@@ -209,7 +209,10 @@
 				</tr>
 				<tr>
 					<td align="center"><a href="reviewer.html" target="_blank" rel="noopener noreferrer">审稿人</a></td>
-					<td>20余本期刊，如Nature Commnications；多个国际会议, 如IEEE BSN</td>
+					<td>
+						&#9679; 20余本期刊，包括Nat. Commun., Biomed. Signal Process. Control, Front. Physiol., Front. Med., Physiol. Meas., ISPRS Int. J. Geo-Inf.和Biosensors<br>
+						&#9679; 多个国际会议, 包括IEEE BSN, BHI; ACM ICMI, ISWC, AUTOMOTIVEUI; ITP
+					</td>
 				</tr>
 				<tr>
 					<td align="center"><a href="https://www.uni-bremen.de/en/csl/projects/past-projects/arthrokinemat" target="_blank" rel="noopener noreferrer"><img src="images/Arthrokinemat.png" height="60" class="pop5"></a><br>Arthrokinemat (2016 — 2019)</td>
