--- a/researchcn.html
+++ b/researchcn.html
@@ -210,7 +210,7 @@
 				<tr>
 					<td align="center"><a href="reviewer.html" target="_blank" rel="noopener noreferrer">审稿人</a></td>
 					<td>
-						&#9679; 20余本期刊，包括Nat. Commun., Biomed. Signal Process. Control, Front. Physiol., Front. Med., Physiol. Meas., ISPRS Int. J. Geo-Inf.和Biosensors<br>
+						&#9679; 20余本期刊，包括Nat. Commun.、Biomed. Signal Process. Control、Remote Sens.、Front. Physiol.、Front. Med.、Physiol. Meas.、ISPRS Int. J. Geo-Inf.、Biomimetics、Biosensors<br>
 						&#9679; 多个国际会议, 包括IEEE BSN, BHI; ACM ICMI, ISWC, AUTOMOTIVEUI; ITP
 					</td>
 				</tr>
