--- a/reviewer.html
+++ b/reviewer.html
@@ -36,6 +36,7 @@
 		&#9679; Applied Sciences<br>
 		&#9679; Big Data and Cognitive Computing<br>
 		&#9679; Biomedicines<br>
+		&#9679; Biomimetics<br>
 		&#9679; Biosensors<br>
 		&#9679; Brain Sciences<br>
 		&#9679; Buildings<br>
@@ -46,6 +47,7 @@
 		&#9679; Information<br>
 		&#9679; Journal of Personalized Medicine<br>
 		&#9679; Micromachines<br>
+		&#9679; Remote Sensing<br>
 		&#9679; Sensors<br>
 		&#9679; Sports<br>
 		&#9679; Sustainability<br>
