--- a/research.html
+++ b/research.html
@@ -207,7 +207,7 @@
 				<tr>
 					<td align="center"><a href="reviewer.html" target="_blank" rel="noopener noreferrer">Reviewer</a></td>
 					<td>
-						&#9679; For over 20 journals, including Nat. Commun., Biomed. Signal Process. Control, Front. Physiol., Front. Med., Physiol. Meas., ISPRS Int. J. Geo-Inf., and Biosensors<br>
+						&#9679; For over 20 journals, including Nat. Commun., Biomed. Signal Process. Control, Remote Sens., Front. Physiol., Front. Med., Physiol. Meas., ISPRS Int. J. Geo-Inf., Biomimetics, and Biosensors<br>
 						&#9679; For various conferences, including IEEE BSN, BHI; ACM ICMI, ISWC, AUTOMOTIVEUI; ITP
 					</td>
 				</tr>
