--- a/reviewer.html
+++ b/reviewer.html
@@ -21,6 +21,7 @@
 		<br>
 		<img src="images/IOP.png" height="20"><br>
 		&#9679; Physiological Measurement<br>
+		&#9679; Engineering Research Express<br>		
 		<br>
 		<img src="images/Frontiers.png" height="25" class="pop1"><br>
 		&#9679; Frontiers in Physilogy<br>
