--- a/documents/Liuge.html
+++ b/documents/Liuge.html
@@ -19,6 +19,7 @@
 		<b>作曲：喜納昌吉<br>
 		中文作词：刘辉</b><br><br>
 		
+		-1-<br>
 		河流啊 流向远方<br>
 		何方何方是海洋<br><br>
 
@@ -39,6 +40,55 @@
 		明日再启航<br>
 		这花凋谢那花绽放<br><br><br>
 
+		-2-<br>
+		泪儿啊 流到心上<br>
+		何时何时会坚强<br><br>
+
+		情儿啊 流到心上<br>
+		何时何时会靠港<br><br>
+
+		只盼望<br>
+		你的忧伤<br>
+		不曾徘徊彷徨<br><br>
+
+		就像花一样<br>
+		就像花一样<br>
+		也可以吐露芬芳<br><br>
+
+		难免会失望<br>
+		恨过爱一场<br>
+		明日再启航<br>
+		明日再启航<br>
+		这花凋谢那花绽放<br><br><br>
+
+		-3-<br>
+		花儿啊 留在身旁<br>
+		何处何处都生长<br><br>
+
+		心儿啊 留在身旁<br>
+		何处何处都明朗<br><br>
+
+		只盼望<br>
+		你的歌唱<br>
+		永远暖意荡漾<br><br>
+
+		就像花一样<br>
+		就像花一样<br>
+		总可以吐露芬芳<br><br>
+
+		难免会迷茫<br>
+		累过拼一场<br>
+		明日再启航<br>
+		明日再启航<br>
+		这花凋谢那花绽放<br><br><br>
+		
+		-4-<br>
+		难免会惆怅<br>
+		梦过醒一场<br>
+		明日再启航<br>
+		明日再启航<br>
+		这花凋谢那花绽放<br><br><br>
+		
 		<b>歌词版权所有，若需使用本歌词请联络首页邮箱</b><br><br><br>
 		
 		原曲『花~すべての人の心に花を~』<br>
