--- a/students.html
+++ b/students.html
@@ -152,7 +152,7 @@
 
 			<tr>
 				<td align="center">
-					<img src="images/students/Male.png" width="150"></a><br>
+					<img src="images/students/Steffen_Lahrberg.jpg" width="150"></a><br>
 					<b>Steffen Lahrberg</b>
 				</td>
 				<td>
