--- a/studentscn.html
+++ b/studentscn.html
@@ -151,7 +151,7 @@
 
 			<tr>
 				<td align="center">
-					<img src="images/students/Male.png" width="150"></a><br>
+					<img src="images/students/Steffen_Lahrberg.jpg" width="150"></a><br>
 					<b>Steffen Lahrberg（德）</b>
 				</td>
 				<td>
