--- a/research.html
+++ b/research.html
@@ -220,11 +220,11 @@
 					</td>
 				</tr>
 				<tr>
-					<td align="center"><a href="https://www.uni-bremen.de/en/csl/projects/current-projects/etap" target="_blank" rel="noopener noreferrer"><img src="images/ETAP.png" height="60" class="pop5"></a><br>ETAP (2022 — 2025)</td>
+					<td align="center"><a href="https://www.uni-bremen.de/en/csl/projects/current-projects/nf-bwb-promoting-young-talents-supported-by-bremen-securities-exchange-foundation" target="_blank" rel="noopener noreferrer"><img src="images/BWB.png" height="60" class="pop5"></a><br>NF-BWB (2023 — 2025)</td>
 					<td>
-						&#9679; Project Planner and Researcher<br>
-						&#9679; Federal Ministry of Health, Germany (BMG)<br>
-						&#9679; Evaluation of semi-automated care processes in long-term care using AI-based activity monitoring
+						&#9679; Project Facilitator and Researcher  <a href="images/BBDCB23.png" target="_blank" rel="noopener noreferrer"><img src="images/BBDCB23.png" width="20" class="pop40"></a><br>
+						&#9679; Bremen Securities Exchange Foundation (BWB)<br>
+						&#9679; Promoting young talents: big data and AI popularization and competition in high schools
 					</td>
 				</tr>
 				<tr>
@@ -233,6 +233,15 @@
 						&#9679; Project Facilitator and Researcher<br>
 						&#9679; Federal Ministry of Education and Research, Germany (BMBF)<br>
 						&#9679; Interactive Learning Environment for Cognitive Robotics
+					</td>
+				</tr>
+
+				<tr>
+					<td align="center"><a href="https://www.uni-bremen.de/en/csl/projects/current-projects/etap" target="_blank" rel="noopener noreferrer"><img src="images/ETAP.png" height="60" class="pop5"></a><br>ETAP (2022 — 2025)</td>
+					<td>
+						&#9679; Project plan participant<br>
+						&#9679; Federal Ministry of Health, Germany (BMG)<br>
+						&#9679; Evaluation of semi-automated care processes in long-term care using AI-based activity monitoring
 					</td>
 				</tr>
 				<tr>
