--- a/researchcn.html
+++ b/researchcn.html
@@ -217,23 +217,30 @@
 				<tr>
 					<td align="center"><a href="https://www.uni-bremen.de/en/csl/projects/past-projects/arthrokinemat" target="_blank" rel="noopener noreferrer"><img src="images/Arthrokinemat.png" height="60" class="pop5"></a><br>Arthrokinemat (2016 — 2019)</td>
 					<td>
-						&#9679; 主持德国联邦经济事务与气侯行动部（BMWi）Arthrokinemat项目<br>
+						&#9679; 主研德国联邦经济事务与气侯行动部（BMWi）Arthrokinemat项目<br>
 						&#9679; 康复工程中的集成传感器智能膝盖绷带<br>
 						&#9679; 已经成功结题
 					</td>
 				</tr>
 				<tr>
-					<td align="center"><a href="https://www.uni-bremen.de/en/csl/projects/current-projects/etap" target="_blank" rel="noopener noreferrer"><img src="images/ETAP.png" height="60" class="pop5"></a><br>ETAP (2022 — 2025)</td>
+					<td align="center"><a href="https://www.uni-bremen.de/en/csl/projects/current-projects/nf-bwb-promoting-young-talents-supported-by-bremen-securities-exchange-foundation" target="_blank" rel="noopener noreferrer"><img src="images/BWB.png" height="60" class="pop5"></a><br>NF-BWB (2023 — 2025)</td>
 					<td>
-						&#9679; 主持德国联邦卫生部（BMG）ETAP项目<br>
-						&#9679; 基于人工智能运动监测的长期护理中半自动化护理优化
+						&#9679; 主研德国不来梅证券基金会（BWB）资助的NF-BWB"青年英才培养"项目  <a href="images/BBDCB23.png" target="_blank" rel="noopener noreferrer"><img src="images/BBDCB23.png" width="20" class="pop40"></a><br>
+						&#9679; 在多所高校普及人工智能和大数据，并举办竞赛
 					</td>
 				</tr>
 				<tr>
 					<td align="center"><a href="https://www.uni-bremen.de/en/csl/projects/current-projects/intel4coro" target="_blank" rel="noopener noreferrer"><img src="images/IntEL4CoRo.png" height="60" class="pop5"></a><br>IntEL4CoRo (2021 — 2025)</td>
 					<td>
-						&#9679; 主持德国联邦教育及研究部（BMBF）IntEL4CoRo项目<br>
+						&#9679; 主研德国联邦教育及研究部（BMBF）IntEL4CoRo项目<br>
 						&#9679; 智能机器人设计仿真教学平台
+					</td>
+				</tr>
+				<tr>
+					<td align="center"><a href="https://www.uni-bremen.de/en/csl/projects/current-projects/etap" target="_blank" rel="noopener noreferrer"><img src="images/ETAP.png" height="60" class="pop5"></a><br>ETAP (2022 — 2025)</td>
+					<td>
+						&#9679; 参与起草德国联邦卫生部（BMG）ETAP项目<br>
+						&#9679; 基于人工智能运动监测的长期护理中半自动化护理优化
 					</td>
 				</tr>
 				<tr>
