--- a/art.html
+++ b/art.html
@@ -237,14 +237,17 @@
 				</tr>
 				<tr valign = "top">
 					<td>
-						<b>2022 Autumn Concert "<i>Around Europe Medley</i>"</b><br><br>
-						Organizer: Gärten der Welt, Berlin
+						<b>2022—2023 "<i>Around Europe Medley</i>"</b><br><br>
+						<font size="2">Organizer:<br>
+						&#9679; Übersee-Museum, Bremen, 2023<br>
+						&#9679; Rathaus Braunschweig, 2022<br>
+						&#9679; Gärten der Welt, Berlin, 2022</font>
 					</td>
 					<td>
 						<video width="350" controls="controls">
-							<source src="videos/2022_GdW_Around_Europe_Medley_LQ.mp4" type="video/mp4"/>
+							<source src="videos/Around_Europe_Medley_LQ.mp4" type="video/mp4"/>
 						</video><br>
-						<font size="2">View in SD-Format (Downloadable): </font><a href="https://seafile.zfn.uni-bremen.de/f/50ee56e40c5146f795a1/" target="_blank" rel="noopener noreferrer"><img src="images/Seafile.png" height="13"></a>
+						<font size="2">View in SD-Format (Downloadable): </font><a href="https://seafile.zfn.uni-bremen.de/f/0990694cf48c43aab87e/" target="_blank" rel="noopener noreferrer"><img src="images/Seafile.png" height="13"></a>
 					</td>
 				</tr>
 				<tr valign = "top">
