--- a/publications.html
+++ b/publications.html
@@ -117,15 +117,13 @@
 		-->
 	</tr></td>
 	<tr><td>
-		<img src="images/Forthcoming.png" height="20" class = "pop1">
 		<i>Efficient Wi-Fi-Based Human Activity Recognition Using Adaptive Antenna Elimination.</i> Jannat, M.K.A., Islam, M.S., Yang, S-H*, and Liu, H.* (2023). IEEE Access.<br>
-		<!--
 		<a href="" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
-		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
-		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
-		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/CSL.svg" height="15"></a>
-		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/" target="_blank" rel="noopener noreferrer"></a>
-		-->
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/374244149_Efficient_Wi-Fi-Based_Human_Activity_Recognition_Using_Adaptive_Antenna_Elimination" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/Efficient-Wi-Fi-Based-Human-Activity-Recognition-Jannat-Islam/02ff217d1dd6316596fc1da4b8f6a107ee5b7f06" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://ieeexplore.ieee.org/document/10265041" target="_blank" rel="noopener noreferrer"><img src="images/IEEE.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.csl.uni-bremen.de/cms/publications/bibtexbrowser.php?key=jannat2023wifi_har&bib=csl_all_publications.bib" target="_blank" rel="noopener noreferrer"><img src="images/CSL.svg" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.1109/ACCESS.2023.3320069" target="_blank" rel="noopener noreferrer">10.1109/ACCESS.2023.3320069</a>
 	</tr></td>
 	<tr><td>
 		<i>Hybrid Modeling on Reconstitution of Continuous Arterial Blood Pressure Using Finger Photoplethysmography.</i> Shi, W., Zhou, C., Zhang, Y., Li, K., Ren, X., Liu, H.*, and Ye, X.* (2023). Biomedical Signal Processing and Control, 85:104972. Elsevier.<br>
